なんとか直したけどガチで沼

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,16 +1,19 @@
-FROM haskell:latest
-
-ENV PATH="${PATH}:/root/.ghcup/bin:/root/.cabal/bin:/root/.ghc/bin"
-
-RUN curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | BOOTSTRAP_HASKELL_NONINTERACTIVE=1 BOOTSTRAP_HASKELL_GHC_VERSION=9.4.5 BOOTSTRAP_HASKELL_CABAL_VERSION=3.8.1.0 BOOTSTRAP_HASKELL_INSTALL_NO_STACK=1 sh
-
+FROM haskell:9.4.8-slim
 
 RUN chsh -s /bin/bash
-RUN apt update && apt upgrade -y
-RUN apt install -y curl
+RUN apt-get update && apt-get upgrade -y
+RUN apt-get install -y curl
+# RUN apt-get install -y --no-install-recommends build-essential curl libffi-dev libffi8ubuntu1 libgmp-dev libgmp10 libncurses-dev libncurses5 libtinfo5 llvm-14
 
-RUN apt update -y && apt install -y gpg sudo wget
+
+RUN apt-get install -y gpg sudo wget
 RUN install -dm 755 /etc/apt/keyrings
+
+
+RUN curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | BOOTSTRAP_HASKELL_NONINTERACTIVE=1 BOOTSTRAP_HASKELL_GHC_VERSION=9.4.8 BOOTSTRAP_HASKELL_CABAL_VERSION=3.8.1.0 sh
+
+ENV PATH="${PATH}:/root/.ghcup/bin:/root/.cabal/bin:/root/.ghc/bin:/root/.ghcup/hls/2.7.0.0/bin"
+RUN ghcup install hls 2.7.0.0
 
 ENV TZ=Asia/Tokyo
 
