--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,10 +6,19 @@
   "workspaceFolder": "/workspaces/atcoder-hs",
   "customizations": {
     "vscode": {
-      "settings": {},
+      "settings": {
+        "haskell.serverEnvironment": {
+        },
+        "haskell.toolchain": {
+          "ghc": "9.4.8",
+          "hls": "2.7.0.0",
+          "cabal": "3.8.1.0"
+        }
+      },
       "extensions": [
         "haskell.haskell",
-        "justusadam.language-haskell"
+        "justusadam.language-haskell",
+        "asvetliakov.vscode-neovim"
       ]
     }
   },
