--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM haskell:9.4.8-slim
+FROM --platform=linux/amd64 haskell:9.4.8-slim
 
 RUN chsh -s /bin/bash
 RUN apt-get update && apt-get upgrade -y
@@ -16,8 +16,7 @@ RUN ghcup install hls 2.7.0.0
 ENV TZ=Asia/Tokyo
 
 RUN wget -qO - https://mise.jdx.dev/gpg-key.pub | gpg --dearmor | tee /etc/apt/keyrings/mise-archive-keyring.gpg 1> /dev/null
-# RUN echo "deb [signed-by=/etc/apt/keyrings/mise-archive-keyring.gpg arch=amd64] https://mise.jdx.dev/deb stable main" | sudo tee /etc/apt/sources.list.d/mise.list
-RUN echo "deb [signed-by=/etc/apt/keyrings/mise-archive-keyring.gpg arch=arm64] https://mise.jdx.dev/deb stable main" | sudo tee /etc/apt/sources.list.d/mise.list
+RUN echo "deb [signed-by=/etc/apt/keyrings/mise-archive-keyring.gpg arch=amd64] https://mise.jdx.dev/deb stable main" | sudo tee /etc/apt/sources.list.d/mise.list
 RUN apt-get update && apt-get install -y mise
 
 RUN echo 'eval "$(mise activate bash)"' >> ~/.bashrc
@@ -26,3 +25,8 @@ RUN mise i node@20.11.1 && mise use -g node@latest
 
 RUN mise i python@3.12.2 && mise use -g python@latest
 
+# install neovim 0.9.5 appimage
+RUN curl -LO https://github.com/neovim/neovim/releases/download/v0.9.5/nvim.appimage
+RUN chmod u+x nvim.appimage
+RUN ./nvim.appimage --appimage-extract
+RUN ln -s /squashfs-root/AppRun /usr/bin/nvim
